--- a/src/templates/actors/fragments/char/tab-skills.html
+++ b/src/templates/actors/fragments/char/tab-skills.html
@@ -12,7 +12,7 @@
         type="number"
         name="data.unspentSkillPoints"
         min="0"
-        value="{{actor.data.data.unspentSkillPoints}}"
+        value="{{actor.system.unspentSkillPoints}}"
         data-dtype="Number"
       />
       <label>{{localize 'swnr.sheet.unspent-skill'}}</label>
@@ -23,7 +23,7 @@
         type="number"
         name="data.unspentPsySkillPoints"
         min="0"
-        value="{{actor.data.data.unspentPsySkillPoints}}"
+        value="{{actor.system.unspentPsySkillPoints}}"
         data-dtype="Number"
       /> 
       <label>{{localize 'swnr.sheet.unspent-psy-skill'}}</label>
