--- a/src/templates/actors/fragments/hdr-PMH.html
+++ b/src/templates/actors/fragments/hdr-PMH.html
@@ -3,9 +3,9 @@
           <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <span
               class="inline-block text-right text-gray-300 cursor-not-allowed w-8 subfield">
-              {{actor.data.data.power.value}}</span>/<input
+              {{actor.system.power.value}}</span>/<input
               class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
-              type="number" name="data.power.max" value="{{actor.data.data.power.max}}" step="1" min="1"
+              type="number" name="data.power.max" value="{{actor.system.power.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
           <label
@@ -19,9 +19,9 @@
           <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <span
               class="inline-block text-right text-gray-300 cursor-not-allowed w-8 subfield">
-              {{actor.data.data.mass.value}}</span><span>/</span><input
+              {{actor.system.mass.value}}</span><span>/</span><input
               class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
-              type="number" name="data.mass.max" value="{{actor.data.data.mass.max}}" step="1" min="1"
+              type="number" name="data.mass.max" value="{{actor.system.mass.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
           <label
@@ -35,10 +35,10 @@
           <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <span
               class="inline-block text-right text-gray-300 cursor-not-allowed w-8 subfield">
-              {{actor.data.data.hardpoints.value}}</span>
+              {{actor.system.hardpoints.value}}</span>
             <span>/</span><input
               class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
-              type="number" name="data.hardpoints.max" value="{{actor.data.data.hardpoints.max}}" step="1" min="1"
+              type="number" name="data.hardpoints.max" value="{{actor.system.hardpoints.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
           <label
