--- a/src/templates/actors/fragments/limited-sheet.html
+++ b/src/templates/actors/fragments/limited-sheet.html
@@ -22,7 +22,7 @@
         class="border text-center px-1 border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
         type="text"
         name="data.notes.public.label"
-        value="{{actor.data.data.notes.public.label}}"
+        value="{{actor.system.notes.public.label}}"
       />
       <!-- prettier-ignore  -->
       <textarea
@@ -31,8 +31,8 @@
         id=""
         cols="30"
         rows="10"
-        placeholder="{{actor.data.data.notes.public.label}}"
-      >{{actor.data.data.notes.public.contents}}</textarea>
+        placeholder="{{actor.system.notes.public.label}}"
+      >{{actor.system.notes.public.contents}}</textarea>
     </div>
   </div>
 
