--- a/src/templates/actors/fragments/quick-skill.html
+++ b/src/templates/actors/fragments/quick-skill.html
@@ -5,7 +5,7 @@
         <a class="sheet-button inline-flex flex-wrap gap-2">
             <div class="flex-shrink">
             {{zeroWidthBreaker item.name}}
-            {{numberFormat item.data.data.rank decimals=0 sign=true}}
+            {{numberFormat item.system.rank decimals=0 sign=true}}
             </div>
             <i class="fas fa-dice-d20"></i>
         </a>
