--- a/src/templates/actors/fragments/ship-actions.html
+++ b/src/templates/actors/fragments/ship-actions.html
@@ -6,7 +6,7 @@
     <div>
       <input
         class="w-10 text-center ml-1 px-1.5 py-0.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-        type="number" min="0" name="data.commandPoints" value="{{actor.data.data.commandPoints}}" />
+        type="number" min="0" name="data.commandPoints" value="{{actor.system.commandPoints}}" />
     </div>
   </div>
   <div>
@@ -25,7 +25,7 @@
     <div>
       <input
         class="w-10 text-center ml-1 px-1.5 py-0.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-        type="number" min="0" name="data.npcCommandPoints" value="{{actor.data.data.npcCommandPoints}}" />
+        type="number" min="0" name="data.npcCommandPoints" value="{{actor.system.npcCommandPoints}}" />
     </div>
 
 
