--- a/src/templates/chat/program-roll.html
+++ b/src/templates/chat/program-roll.html
@@ -1,25 +1,25 @@
 <div class="chat-card">
-  <h3 title="{{ program.data.data.description }}">
+  <h3 title="{{ program.system.description }}">
     {{ program.name }}
   </h3>
 
   <div class="chat-desc">
-    {{#if (wouldTrim program.data.data.description 200)}}
+    {{#if (wouldTrim program.system.description 200)}}
       <span class="hiddenShort">
-        {{{trim program.data.data.description 200}}}
+        {{{trim program.system.description 200}}}
         <div class="border border-gray-700 placeholder-blue-800 pt-0">
           <button class="longShowDesc">Show Long Desc.</button>
         </div>
       </span>
       <div class="border border-gray-700 placeholder-blue-800 pt-0">
         <span style="display:none" class="hiddenLong">
-        {{{ program.data.data.description }}}
+        {{{ program.system.description }}}
         <button class="longHideDesc">Hide Long Desc.</button>
         </span>
       </div>
     {{else}}
       <span>
-        {{{program.data.data.description }}}
+        {{{program.system.description }}}
       </span>
     {{/if}}
   </div>
