--- a/src/templates/dialogs/roll-ship-attack.html
+++ b/src/templates/dialogs/roll-ship-attack.html
@@ -48,7 +48,7 @@
         <select name="stat"
           class="w-32 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
           {{#select defaultStat}}
-          {{#each gunner.data.data.stats as |box name |}}
+          {{#each gunner.system.stats as |box name |}}
           <option value="{{name}}">{{localize (concat "swnr.stat.long." name)}}</option>
           {{/each}}
           {{/select}}
