--- a/src/templates/items/skill-sheet.html
+++ b/src/templates/items/skill-sheet.html
@@ -7,7 +7,7 @@
         name="data.defaultStat"
         class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
       >
-        {{#select data.data.defaultStat}}
+        {{#select system.defaultStat}}
         <option value="ask">{{localize 'swnr.sheet.ask'}}</option>
         {{#*inline "statline"}}
         <option value="{{name}}">
@@ -24,7 +24,7 @@
         name="data.pool"
         class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
       >
-        {{#select data.data.pool}}
+        {{#select system.pool}}
         <option value="ask">{{localize 'swnr.sheet.ask'}}</option>
         <option value="2d6">2D6</option>
         <option value="3d6kh2">3D6</option>
@@ -41,7 +41,7 @@
         min="-1"
         max="4"
         step="1"
-        value="{{data.data.rank}}"
+        value="{{system.rank}}"
       />
     </div>
     <div>
@@ -49,19 +49,19 @@
       <input
         type="text"
         name="data.source"
-        value="{{data.data.source}}"
+        value="{{system.source}}"
         class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
       />
     </div>
   </div>
   <div class="p-2 m-2">
-    {{#if data.data.remember}}
-      {{#if data.data.remember.use}}
+    {{#if system.remember}}
+      {{#if system.remember.use}}
         <label class="flex items-center gap-1">
           <input
             type="checkbox"
             name="data.remember.use"
-            {{checked data.data.remember.use}}
+            {{checked system.remember.use}}
           />
           <div>Use remembered skill (dice, mod, etc). <br>
             Uncheck to forget and ask on next to roll -- stat and dice selection will remain.</div>
