--- a/src/templates/actors/fragments/char/tab-inv.html
+++ b/src/templates/actors/fragments/char/tab-inv.html
@@ -7,11 +7,11 @@
         step="1"
         name="data.credits.debt"
         data-dtype="Number"
-        value="{{actor.data.data.credits.debt}}"
+        value="{{actor.system.credits.debt}}"
       />
-      <label for="data.credits.debt">{{actor.data.data.tweak.debtDisplay}}
+      <label for="data.credits.debt">{{actor.system.tweak.debtDisplay}}
       <a class="credits-change text-gray-100 hover:text-green-400 transition-colors"
-        title="{{localize 'swnr.sheet.credit-change'}} {{actor.data.data.tweak.debtDisplay}}"
+        title="{{localize 'swnr.sheet.credit-change'}} {{actor.system.tweak.debtDisplay}}"
         data-credit-type="debt">
           <i class="fas fa-coins"></i>
       </a> 
@@ -24,11 +24,11 @@
         step="1"
         name="data.credits.balance"
         data-dtype="Number"
-        value="{{actor.data.data.credits.balance}}"
+        value="{{actor.system.credits.balance}}"
       />
-      <label for="data.credits.balance">{{actor.data.data.tweak.balanceDisplay}}
+      <label for="data.credits.balance">{{actor.system.tweak.balanceDisplay}}
       <a class="credits-change text-gray-100 hover:text-green-400 transition-colors"
-        title="{{localize 'swnr.sheet.credit-change'}} {{actor.data.data.tweak.balanceDisplay}}"
+        title="{{localize 'swnr.sheet.credit-change'}} {{actor.system.tweak.balanceDisplay}}"
         data-credit-type="balance">
           <i class="fas fa-coins"></i>
       </a> 
@@ -41,11 +41,11 @@
         step="1"
         name="data.credits.owed"
         data-dtype="Number"
-        value="{{actor.data.data.credits.owed}}"
+        value="{{actor.system.credits.owed}}"
       />
-      <label for="data.credits.owed">{{actor.data.data.tweak.owedDisplay}}
+      <label for="data.credits.owed">{{actor.system.tweak.owedDisplay}}
       <a class="credits-change text-gray-100 hover:text-green-400 transition-colors"
-        title="{{localize 'swnr.sheet.credit-change'}} {{actor.data.data.tweak.owedDisplay}}"
+        title="{{localize 'swnr.sheet.credit-change'}} {{actor.system.tweak.owedDisplay}}"
         data-credit-type="owed">
           <i class="fas fa-coins"></i>
       </a> 
@@ -56,26 +56,26 @@
   <div class="grid grid-cols-2 gap-1 p-1">
     <div class="text-center text-base">
       {{localize 'swnr.item.locationReadied'}}:
-      {{actor.data.data.encumbrance.ready.value}}/{{actor.data.data.encumbrance.ready.max}}
+      {{actor.system.encumbrance.ready.value}}/{{actor.system.encumbrance.ready.max}}
     </div>
     <div
       class="w-full border border-green-600 bg-green-200 rounded-full row-start-2"
     >
       <div
         class="h-2 bg-green-400 rounded-full"
-        style="width: min(100%, calc(100% * {{actor.data.data.encumbrance.ready.value}}/{{actor.data.data.encumbrance.ready.max}}));"
+        style="width: min(100%, calc(100% * {{actor.system.encumbrance.ready.value}}/{{actor.system.encumbrance.ready.max}}));"
       ></div>
     </div>
     <div class="text-center text-base">
       {{localize 'swnr.item.locationStowed'}}:
-      {{actor.data.data.encumbrance.stowed.value}}/{{actor.data.data.encumbrance.stowed.max}}
+      {{actor.system.encumbrance.stowed.value}}/{{actor.system.encumbrance.stowed.max}}
     </div>
     <div
       class="w-full border border-yellow-600 bg-yellow-200 rounded-full"
     >
       <div
         class="h-2 bg-yellow-400 rounded-full"
-        style="width: min(100%, calc(100% * {{actor.data.data.encumbrance.stowed.value}}/{{actor.data.data.encumbrance.stowed.max}}));"
+        style="width: min(100%, calc(100% * {{actor.system.encumbrance.stowed.value}}/{{actor.system.encumbrance.stowed.max}}));"
       ></div>
     </div>
   </div>
