--- a/src/templates/actors/fragments/hdr-HAA.html
+++ b/src/templates/actors/fragments/hdr-HAA.html
@@ -3,10 +3,10 @@
           <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <input
               class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
-              type="number" step="1" name="data.health.value" value="{{actor.data.data.health.value}}"
+              type="number" step="1" name="data.health.value" value="{{actor.system.health.value}}"
               data-dtype="Number" min="0" /><span>/</span><input
               class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
-              type="number" name="data.health.max" value="{{actor.data.data.health.max}}" step="1" min="1"
+              type="number" name="data.health.max" value="{{actor.system.health.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
           <label
@@ -19,7 +19,7 @@
         <div class="ac flex flex-col items-center">
           <input
             class="w-10 text-center px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-            type="number" min="0" name="data.ac" value="{{actor.data.data.ac}}" />
+            type="number" min="0" name="data.ac" value="{{actor.system.ac}}" />
           <label>{{localize 'swnr.sheet.armor-class'}}</label>
         </div>
 
@@ -28,10 +28,10 @@
           <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
             <input
               class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
-              type="number" step="1" name="data.armor.value" value="{{actor.data.data.armor.value}}" data-dtype="Number"
+              type="number" step="1" name="data.armor.value" value="{{actor.system.armor.value}}" data-dtype="Number"
               min="0" /><span>/</span><input
               class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md subfield"
-              type="number" name="data.armor.max" value="{{actor.data.data.armor.max}}" step="1" min="1"
+              type="number" name="data.armor.max" value="{{actor.system.armor.max}}" step="1" min="1"
               data-dtype="Number" />
           </div>
           <label
