--- a/src/templates/items/fragments/item-base.html
+++ b/src/templates/items/fragments/item-base.html
@@ -8,7 +8,7 @@
       name="data.encumbrance"
       min="0"
       data-dtype="Number"
-      value="{{data.data.encumbrance}}"
+      value="{{system.encumbrance}}"
     />
   </div>
   <div class="flex flex-col items-center">
@@ -19,7 +19,7 @@
       name="data.quantity"
       min="0"
       step="1"
-      value="{{data.data.quantity}}"
+      value="{{system.quantity}}"
     />
   </div>
   {{#if (eq "item" item.type)}}
@@ -29,7 +29,7 @@
       <input
         type="checkbox"
         name="data.bundle.bundled"
-        {{checked data.data.bundle.bundled}}
+        {{checked system.bundle.bundled}}
       />
       <input
         type="number"
@@ -38,7 +38,7 @@
         name="data.bundle.amount"
         min="1"
         data-dtype="Number"
-        value="{{data.data.bundle.amount}}"
+        value="{{system.bundle.amount}}"
       />
     </div>
   </div>
@@ -47,7 +47,7 @@
     {{localize 'swnr.item.location'}}:
     <select
       class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
-      name="data.data.location"
+      name="system.location"
     >
       {{#select data.location}}
       <option value="readied">{{localize 'swnr.item.locationReadied'}}</option>
@@ -65,7 +65,7 @@
       name="data.tl"
       min="0"
       data-dtype="Number"
-      value="{{data.data.tl}}"
+      value="{{system.tl}}"
     />
   </div>
   <div class="flex flex-col items-center">
@@ -77,7 +77,7 @@
       name="data.cost"
       min="0"
       data-dtype="Number"
-      value="{{data.data.cost}}"
+      value="{{system.cost}}"
     />
   </div>
   <div>
@@ -86,7 +86,7 @@
       class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
       name="data.quality"
     >
-      {{#select data.data.quality}}
+      {{#select system.quality}}
       <option value="juryRigged">
         {{localize 'swnr.item.quality.juryRigged'}}
       </option>
