--- a/src/templates/items/shipFitting-sheet.html
+++ b/src/templates/items/shipFitting-sheet.html
@@ -6,7 +6,7 @@
       {{localize 'swnr.sheet.ship.effect'}}:
       <input
         class="w-64 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-        type="text" name="data.effect" value="{{data.data.effect}}" />
+        type="text" name="data.effect" value="{{system.effect}}" />
     </div>
   </div>
 </form>
